# cl-lance-mcp

./: Cargo.toml  README.md
.config/tracey/: config.styx
specs/: chunk.md  daemon.md  index.md  mcp.md  search.md
src/: chunk.rs  embed.rs  index.rs  instructions.md  leader.rs  lib.rs  main.rs  search.rs  server.rs
