[package]
name = "cl-lance-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
fastembed = "5.12.1"
futures = "0.3.32"
lancedb = "0.26.2"
rmcp = { version = "1.2.0", features = ["server", "macros", "transport-io", "schemars"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = { version = "1.0", features = ["chrono04"] }
serde_yaml = "0.9.34"
blake3 = "1"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3.27.0"
